# input-method-switcher

./: .gitignore  CMakeLists.txt
data/: 20_proxy.conf.in  20_proxy.rc.in  CMakeLists.txt  com.ubuntu.InputMethodSwitcher.service.in  com.ubuntu.InputMethodSwitcher.xml.in  com.ubuntu.input-method-switcher.gschema.xml.in
data/frameworks/: fcitx  ibus
debian/: README  README.Debian  changelog  control  copyright
src/: CMakeLists.txt  main.c
src/qt5/: CMakeLists.txt  context.cpp  context.h  plugin.cpp  plugin.h  plugin.json
